# desafio_SQLAlchemy

./: README.md  desafio.db  desafio.py  main.py  pyproject.toml
