[tool.poetry]
name = "desafio-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["hudson <hudsonpksj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
